<resources>

    <string name="app_name">AndroidChatter</string>

    <string name="friendUsername">Friend Username</string>

    <string name="friendhint">Find Friend</string>

    <string name="Add">Add</string>

    <string name="Cancel">Cancel</string>

    <string name="message">Messages</string>

    <string name="send">Send</string>

    <string name="username">Username</string>

    <string name="password">Password</string>

    <string name="confirmpassword">Confirm Password</string>

    <string name="email">Email</string>

    <string name="signup">Sign Up</string>

</resources>
